testdata/errors/import_missing/main.spy
import doesnotexist

print(doesnotexist.x)
